# atrium-oauth-axum

./: .env.example  Cargo.toml  README.md
examples/: generate_key.rs
src/: axum.rs  constant.rs  lib.rs  oauth.rs  store.rs  template.rs  types.rs  utils.rs
templates/: base.html  bsky_post.html  error.html  home.html  login.html
