[package]
name = "atrium-oauth-axum"
version = "0.1.0"
edition = "2021"

[dependencies]
atrium-api = "0.25.0"
atrium-common = "0.1.0"
atrium-identity = "0.1.0"
atrium-oauth-client = "0.1.0"
anyhow = "1.0.96"
askama = { version = "0.12.1", default-features = false, features = [
    "with-axum",
] }
askama_axum = { version = "0.4.0", default-features = false }
askama-derive-axum = { version = "0.1.2", default-features = false }
axum = { version = "0.8.1" }
axum-core = "0.5.0"
elliptic-curve = "0.13.8"
env_logger = "0.11.7"
hickory-resolver = { version = "0.24.1", default-features = false, features = [
    "system-config",
    "tokio-runtime",
] }
http = { version = "1.2.0", default-features = false }
jose-jwk = { version = "0.1.2", default-features = false, features = ["p256"] }
log = "0.4.27"
p256 = { version = "0.13.2", default-features = false, features = ["pem"] }
pkcs8 = { version = "0.10.2", default-features = false, features = ["pem"] }
serde = { version = "1.0.215", default-features = false, features = ["derive"] }
serde_json = "1.0.139"
tokio = { version = "1", default-features = false, features = [
    "rt-multi-thread",
] }
tower-sessions = { version = "0.14.0", default-features = false, features = [
    "axum-core",
] }
tower-sessions-redis-store = { version = "0.16.0", features = [
    "enable-native-tls",
] }

[patch.crates-io]
atrium-api = { git = "https://github.com/sugyan/atrium", branch = "feature/agent-rework" }
atrium-common = { git = "https://github.com/sugyan/atrium", branch = "feature/agent-rework" }
atrium-identity = { git = "https://github.com/sugyan/atrium", branch = "feature/agent-rework" }
atrium-oauth-client = { git = "https://github.com/sugyan/atrium", branch = "feature/agent-rework" }

[lints.rust]
# https://github.com/joshka/askama-derive-axum/issues/4
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(tracing)'] }
